--- a/redis/templates/default/sentinel.conf.erb
+++ b/redis/templates/default/sentinel.conf.erb
@@ -1,12 +1,12 @@
 daemonize yes
 port 26379
-sentinel monitor <%= @master_name %> 127.0.0.1 6379 1
+sentinel monitor <%= @master_name %> <%= @serverip %> <%= @port%> 1
 sentinel down-after-milliseconds  <%= @master_name %> 5000
 sentinel config-epoch  <%= @master_name %> 4
 sentinel leader-epoch  <%= @master_name %> 6
 
 <% @instance.each do | i | %>
-sentinel known-slave  <%= @master_name %> <%@i['private_ip']%> <%= @port %>
+sentinel known-slave  <%= @master_name %> <%= @i['private_ip']%> <%= @port %>
 <% end %>
 
 sentinel failover-timeout <%= @master_name %> 1000
