protected mode yes

--- a/redis/templates/default/redis.conf.erb
+++ b/redis/templates/default/redis.conf.erb
@@ -1,3 +1,5 @@
+
+
 # Note that Redis will write a pid file in /var/run/redis.pid when daemonized.
 daemonize yes
 
@@ -8,7 +10,9 @@ pidfile <%= @redis[:pid_file] %>
 port <%= @redis_server[:port] %>
 
 # specified all the interfaces will listen for connections.
-bind <%= @redis_server[:addr] %>
+#bind <%= @redis_server[:addr] %>
+protected-mode yes 
+
 
 # Close the connection after a client is idle for N seconds.
 timeout <%= @redis_server[:timeout] %>
