no protected mode

--- a/redis/templates/default/redis.conf.erb
+++ b/redis/templates/default/redis.conf.erb
@@ -11,7 +11,7 @@ port <%= @redis_server[:port] %>
 
 # specified all the interfaces will listen for connections.
 #bind <%= @redis_server[:addr] %>
-protected-mode yes 
+protected-mode no 
 
 
 # Close the connection after a client is idle for N seconds.
